// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DraggableSectionAnchor snapshots > should hide prompt when mouse leave 1`] = `
<DocumentFragment>
  <div
    class="DraggableSectionAnchor DraggableSectionAnchor--draggable"
    data-anchor-index="0"
    data-test-anchor="e2eValue"
  />
</DocumentFragment>
`;

exports[`DraggableSectionAnchor snapshots > should render DraggableSectionAnchor 1`] = `
<DocumentFragment>
  <div
    class="DraggableSectionAnchor"
    data-anchor-index="0"
    data-test-anchor="e2eValue"
  />
</DocumentFragment>
`;

exports[`DraggableSectionAnchor snapshots > should render prompt when mouse enter 1`] = `
<DocumentFragment>
  <div
    class="DraggableSectionAnchor DraggableSectionAnchor--draggable"
    data-anchor-index="0"
    data-test-anchor="e2eValue"
  >
    <div
      class="DraggableSectionAnchor__prompt"
    />
  </div>
</DocumentFragment>
`;

exports[`DraggableSectionAnchor snapshots > should render when is draggable 1`] = `
<DocumentFragment>
  <div
    class="DraggableSectionAnchor DraggableSectionAnchor--draggable"
    data-anchor-index="0"
    data-test-anchor="e2eValue"
  />
</DocumentFragment>
`;
